--- a/app/src/main/res/layout/fragment_wishlist.xml
+++ b/app/src/main/res/layout/fragment_wishlist.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.WishlistFragment">
+    tools:context=".fragment.WishlistFragment"
+    android:id="@+id/fragment_wishlist">
 
     <!-- TODO: Update blank fragment layout -->
     <!--<TextView
